--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ body{
 .banner{
     height: calc(100vh - 80px);
 }
+.new-web-desgin{
+    height: 100vh;
+}
+.stop-writing{
+    background-image: url("img/background.png");
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+}
